objects/Band__c.object
<CustomObject>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rock and Roll</fullName>
                </value>
                <value>
                    <fullName>Bossanova</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Headliner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Headliner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Manager Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Needs_Piano__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Piano</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Twitter Handle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Band</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Bossanova_Bands</fullName>
        <columns>NAME</columns>
        <columns>Genre__c</columns>
        <columns>Manager_Phone_Number__c</columns>
        <columns>Twitter_Handle__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Genre__c</field>
            <operation>equals</operation>
            <value>Bossanova</value>
        </filters>
        <label>Bossanova Bands</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Band Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>